# pulsaar

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
